--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
+# Custom vars
+version: 1.2.0
+
+# Setup
+encoding: utf-8
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -24,15 +30,43 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+baseurl: /zebra-snooze
+url: https://kosalanuwan.github.io
+repository: kosalanuwan/zebra-snooze
+
+# Defaults
+defaults:
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: page
+  
+  # _posts
+  - scope: 
+      path: "_posts"
+      type: posts
+    values:
+      layout: post
 
 # Build settings
-theme: minima
+permalink: pretty
+sass:
+  style: compressed
+# theme: minima
+# Gems
 plugins:
+  - github-pages
+  - jemoji
+  - jekyll-paginate
   - jekyll-feed
+  - jekyll-sitemap   
+  - jekyll-gist
+  - jekyll-redirect-from
+whitelist:
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default.
