content: improve title and tagline wording

--- a/_data/website.yml
+++ b/_data/website.yml
@@ -1,8 +1,8 @@
-title: Zebra Snooze
+title: zebra snooze
 tagline: >-
-  A Jekyll Remote Theme
+  This is the sixth zebra snoozing thoroughly.
 description: >- # tagline can be a bit lengthy sometimes
-  <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s Jekyll remote theme for static sites that emphasizes content rather aesthetic fluff.
+  <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s sixth Jekyll remote zebra snoozing thoroughly.
 
 bugs: https://github.com/kosalanuwan/ama/#readme
 date_format: "%b %-d, %Y"
