--- a/_data/website.yml
+++ b/_data/website.yml
@@ -2,7 +2,7 @@ title: zebra snooze
 tagline: >-
   This is the sixth zebra snoozing thoroughly.
 description: >- # tagline can be a bit lengthy sometimes
-  <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s sixth Jekyll remote zebra snoozing thoroughly.
+  <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s sixth zebra snoozing thoroughly for a Jekyll remote theme.
 
 bugs: https://github.com/kosalanuwan/ama/#readme
 date_format: "%b %-d, %Y"
