--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 baseurl: /zebra-snooze
-url: https://kosalanuwan.github.io
-repository: kosalanuwan/zebra-snooze
+url: https://alertbox.github.io
+repository: alertbox/zebra-snooze
 
 # Defaults
 defaults:
