--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,9 @@
 	"name": "GitHub Pages (Jekyll)",
 	// See complete list https://mcr.microsoft.com/v2/devcontainers/base/tags/list
 	"image": "mcr.microsoft.com/devcontainers/base:dev-bullseye",
-	"hostRequirements": {
-		"memory": "4gb"
-	},
+	// "hostRequirements": {
+	// 	"memory": "2gb"
+	// },
 	"containerEnv": {
 		"LANG":"en_US.UTF-8",
 		"LANGUAGE":"en_US:en",
@@ -24,14 +24,9 @@
 	],
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode",
+	// "remoteUser": "vscode",
 
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {
-			"username": "vscode",
-			"configureZshAsDefaultShell": true,
-			"installOhMyZsh": false
-		},
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
 			"moby": false,
 			"dockerDashComposeVersion": "v2" 
@@ -73,8 +68,5 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// Fix for Omnisharp analyzer fail
-	// Read more https://github.com/OmniSharp/omnisharp-vscode/issues/3143#issuecomment-513501863
-	"postCreateCommand": "zsh .devcontainer/post-create.zsh",
-	// "overrideCommand": false,
+	"postCreateCommand": "zsh .devcontainer/post-create.zsh"
 }
