--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,13 +3,6 @@
 	// See complete list https://mcr.microsoft.com/v2/devcontainers/base/tags/list
 	"image": "mcr.microsoft.com/devcontainers/base:dev-bullseye",
 	
-	"containerEnv": {
-		"LANG":"en_US.UTF-8",
-		"LANGUAGE":"en_US:en",
-		"TZ":"Etc/UTC",
-		"LC_ALL":"en_US.UTF-8"
-	},
-	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		// Jekyll server
@@ -17,10 +10,11 @@
 		// Live reload server
 		35729
 	],
-
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode",
-
+	
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	"remoteUser": "root",
+	
+	// Add more features. See complete list https://github.com/devcontainers/features
 	"features": {
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
 			"moby": false,
@@ -33,6 +27,14 @@
 			"version": "2.7.4" 
 		}
 	},
+	
+	"containerEnv": {
+		"LANG":"en_US.UTF-8",
+		"LANGUAGE":"en_US:en",
+		"TZ":"Etc/UTC",
+		"LC_ALL":"en_US.UTF-8"
+	},
+
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
