--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,7 @@
 {
 	"name": "GitHub Pages (Jekyll)",
-	"image": "mcr.microsoft.com/vscode/devcontainers/base:dev-bullseye",
-
-	"containerEnv": {
-		"LANG":"en_US.UTF-8",
-		"LANGUAGE":"en_US:en",
-		"TZ":"Etc/UTC",
-		"LC_ALL":"en_US.UTF-8"
-	},
-
-    "workspaceMount": "src=${localWorkspaceFolder},dst=/workspace,type=bind,consistency=cached",
-	"workspaceFolder": "/workspace",
+	// See complete list https://mcr.microsoft.com/v2/devcontainers/base/tags/list
+	"image": "mcr.microsoft.com/devcontainers/base:dev-bullseye",
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
@@ -19,58 +10,60 @@
 		// Live reload server
 		35729
 	],
-
+	
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	"remoteUser": "root",
+	
+	// Add more features. See complete list https://github.com/devcontainers/features
 	"features": {
-		"common": {
-			"username": "automatic",
-			"uid": "automatic",
-			"gid": "automatic",
-			"installZsh": true,
-			"upgradePackages": true
-		},
-		// GitHub Pages dependencies https://pages.github.com/versions/
-		"ruby": "2.7.4",
-		"node": {
-			"version": "lts",
-        	"nodeGypDependencies": true
-		},
-		"docker-from-docker": {
-			"version": "latest",
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
 			"moby": false,
-			"dockerDashComposeVersion": "v2"
+			"dockerDashComposeVersion": "v2" 
 		},
-		"github-cli": "latest"
+		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers/features/node:1": {},
+		// GitHub Pages dependencies https://pages.github.com/versions/
+		"ghcr.io/devcontainers/features/ruby:1": { 
+			"version": "2.7.4" 
+		}
 	},
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"terminal.integrated.defaultProfile.linux": "zsh",
-		"editor.formatOnPaste": true,
-		"editor.guides.bracketPairs": "active",
-		"debug.internalConsoleOptions": "neverOpen",
+	
+	"containerEnv": {
+		"LANG":"en_US.UTF-8",
+		"LANGUAGE":"en_US:en",
+		"TZ":"Etc/UTC",
+		"LC_ALL":"en_US.UTF-8"
+	},
 
-		"files.watcherExclude": {
-			"**/_site/**": true
+	// Configure tool-specific properties.
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"ms-vscode.wordcount",
+				"editorconfig.editorconfig",
+				"esbenp.prettier-vscode",
+				"streetsidesoftware.code-spell-checker",
+				"znck.grammarly",
+				"redhat.fabric8-analytics",
+				"redhat.vscode-yaml",
+				"bierner.github-markdown-preview",
+				"rebornix.Ruby"
+			],
+			// Set *default* container specific settings.json values on container create.
+			"settings": {
+				"terminal.integrated.defaultProfile.linux": "zsh",
+				"editor.formatOnPaste": true,
+				"editor.guides.bracketPairs": "active",
+				"debug.internalConsoleOptions": "neverOpen",
+				"files.watcherExclude": {
+					"**/_site/**": true
+				}
+			}
 		}
 	},
 
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [		
-		"ms-vscode.wordcount",
-		"editorconfig.editorconfig",
-		"esbenp.prettier-vscode",
-		"streetsidesoftware.code-spell-checker",
-        "znck.grammarly",
-		"redhat.fabric8-analytics",
-		"redhat.vscode-yaml",
-		"bierner.github-markdown-preview"
-	],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// Fix for Omnisharp analyzer fail
-	// Read more https://github.com/OmniSharp/omnisharp-vscode/issues/3143#issuecomment-513501863
-	"postCreateCommand": "zsh .devcontainer/post-create.zsh",
-	// "overrideCommand": false,
-	
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"postCreateCommand": "zsh .devcontainer/post-create.zsh"
 }
